# movie-bot

./: .gitignore  README.md  main.ipynb  pyproject.toml
docs/: TECHNICAL_EXPLAINER.md
